@@ -87,6 +87,10 @@ Other changes in Shorewall 4.0.0 Beta 5.
 	   --directory		  SHOREWALL_DIR
 	   --timestamp		  TIMESTAMP
 
+2)  When TC_ENABLED=Internal, Shorewall-perl now validates classids in
+    the MARK/CLASSIFY column of /etc/shorewall/tcrules against the
+    classes generated by /etc/shorewall/tcclasses.
+
 Migration Considerations:
 
 1)  You cannot simply upgrade your existing Shorewall package. You must
